hard-gists/6102062/run.log
=== Docker Run Log for 6102062 ===
Started at: Mi 29. Okt 16:20:00 CET 2025

[2025-10-29 16:20:01] START: Running container for 6102062
[2025-10-29 16:20:01] SUCCESS: Container 9eaf4ecd60316987cd2c023e38c2be17e3ca797c930a533c98604f49adbab9ec started for 6102062
=== Container logs for 6102062 ===
  File "/snippet.py", line 169
    print tdc.getBlurredTerms('20710',0.2)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6102062 ===
[2025-10-29 16:20:03] INFO: Container 9eaf4ecd60316987cd2c023e38c2be17e3ca797c930a533c98604f49adbab9ec has stopped
